<resources>
    <string name="app_name">SalaryViewer</string>
    <string name="salaryviewer_1_0_under_construction">SalaryViewer 1.0 UNDER CONSTRUCTION</string>
    <string name="expense">Expense...</string>
    <string name="ok">OK</string>
    <string name="remove">Remove</string>
    <string name="cost">cost</string>
    <string name="objects">objects:</string>
    <string name="sum">sum</string>
    <string name="charts">Charts</string>
    <string name="chart">Chart</string>
    <string name="summary">Summary:</string>
</resources>
